# projekt-2-barto159

./: CMakeLists.txt
src/: main.cpp
